# slip

./: Cargo.toml  slip.code-workspace
slip-compile/: Cargo.toml
slip-compile/src/: main.rs
slip-compile/src/diag/: mod.rs  output.rs  source.rs  span.rs
slip-compile/src/pass/: context.rs  remap.rs
slip-compile/src/reduce/: annotation.rs  mod.rs  path.rs  resolve.rs  type_.rs
slip-compile/src/reduce/process/: mod.rs  struct_.rs
slip-compile/src/stream/: test.rs  token.rs
slip-compile/src/syn/: enum_.rs  item.rs  kind.rs  mod.rs  module.rs  roll.rs  root.rs  struct_.rs  unit.rs  use_.rs
slip-compile/src/syn/function/: mod.rs
slip-compile/src/syn/function/expression/: access.rs  array.rs  atom.rs  call.rs  index.rs  infix.rs  map.rs  mod.rs  prefix.rs  suffix.rs  tuple.rs
slip-compile/src/syn/function/statement/: catch.rs  for_.rs  group.rs  if_.rs  let_.rs  mod.rs  return_.rs  try_.rs  unless.rs  while_.rs
slip-typal/: Cargo.toml
slip-typal/src/: lib.rs  version.rs
slip-typal/src/module/: funcs.rs  mod.rs  name.rs  operation.rs  type_.rs
slip-typal/src/spec/: mod.rs
src/: error.rs  main.rs
src/diag/: diagnostic.rs  emission.rs  instance.rs  level.rs  mod.rs  name.rs  overrides.rs  source.rs  span.rs
src/pass/: interpret.rs  mod.rs
src/reduce/: annotation.rs  arecot.rs  mod.rs  path.rs  process.rs  resolve.rs  type_.rs
src/stream/: mod.rs  test.rs  token.rs
src/syn/: enum_.rs  item.rs  kind.rs  mod.rs  module.rs  roll.rs  root.rs  struct_.rs  unit.rs  use_.rs
src/tacky/: mod.rs
src/visit/: expression.rs  mod.rs  root.rs  statement.rs
(+43 files in other folders)
