[package]
name = "slip"
version = "0.1.0"
authors = ["Jeremy Rodi <me@medcat.me>"]
edition = "2018"

[dependencies]
lazy_static = "1.0.2"
error-chain = "0.12.0"
regex = "1"
serde = { version = "1.0.71", features = ["rc"] }
serde_derive = "1.0.71"
term = "0.4.6"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm6-0" }
