[package]
name = "slip"
version = "0.1.0"
authors = ["Jeremy Rodi <me@medcat.me>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
failure = "0.1.5"
regex = "1.1.5"
serde = { version = "1.0.90", features = ["rc"] }
serde_derive = "1.0.90"
term = "0.5.2"
either = "1.5.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
