[package]
name = "slip"
version = "0.1.0"
authors = ["Jeremy Rodi <me@medcat.me>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
failure = "0.1.6"
regex = "1.3.1"
serde = { version = "1.0.102", features = ["rc", "derive"] }
term = "0.6.1"
either = "1.5.3"
serde_json = "1.0.41"
slip-typal = { path = "../slip-typal" }
