[package]
name = "slip-typal"
version = "0.1.0"
authors = ["retrocat <me@retroc.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
bincode = "1.2.0"
failure = "0.1.6"
regex = "1.3.1"
lazy_static = "1.4.0"

[dev-dependencies]
serde_json = "1.0.41"
